note about SSH, which is not working..

--- a/.backlog.md
+++ b/.backlog.md
@@ -2,13 +2,16 @@
 
 | Hours remaining | description |
 | --- | --- |
-| 2 | Keyboard simulation |
+| 2 | Keyboard simulation over SSH |
 | 2 | Init default binary encoding for keys |
 | 2 | mouse option |
 | 6 | Bluetooth HID |
 
 
 ## Keyboard simulation
+
+Currently it does not work over
+[SSH](https://github.com/boppreh/keyboard/issues/195)
 
 - https://github.com/moses-palmer/pynput
 - https://github.com/boppreh/keyboard
