--- a/.backlog.md
+++ b/.backlog.md
@@ -16,6 +16,13 @@ Currently it does not work over
 - https://github.com/moses-palmer/pynput
 - https://github.com/boppreh/keyboard
 
+So we basically have 4 ways of output:
+- DONE stdout from python
+- DONE available on local computer (when screen connected)
+- TODO usb interface device using USB OTG client mode, we can use my orangepi/raspberrypi zero for this (https://randomnerdtutorials.com/raspberry-pi-zero-usb-keyboard-hid/ https://gist.github.com/gbaman/50b6cca61dd1c3f88f41)
+- TODO bluetooth HID (https://github.com/AnesBenmerzoug/Bluetooth_HID)
+
+
 ## Binary encoding
 
 See the initial setup in the yaml file,
