--- a/.backlog.md
+++ b/.backlog.md
@@ -36,6 +36,21 @@ keyboard
 ([HID](https://github.com/007durgesh219/BTGamepad))
 to devices
 
+#### Links
+
+- https://github.com/AnesBenmerzoug/Bluetooth_HID
+- https://github.com/quangthanh010290/keyboard_mouse_emulate_on_raspberry
+- https://github.com/dulli/BlueFire/tree/ef6f6b708c4a3a57876662a2348bf3e17aec3488
+- https://github.com/007durgesh219/BTGamepad
+- https://github.com/mumumusuc/bluez-ns-controller/blob/4d76b1d868ff6a3760820a2fea4d24c72476c119/controller.py
+- https://github.com/pikvm/kvmd/blob/12795eb858560f15269ef2791355d5f3691dc3d6/kvmd/plugins/hid/bt/server.py
+- https://github.com/HeadHodge/smartRemotes/tree/a9103e4d0fcbdafca79dccc989dab900df787ad4/imports/bluetooth
+- https://github.com/Brikwerk/nxbt/blob/0fe9acaaf0fac8014f9aaee53943711a106b572c/nxbt/controller/server.py
+- https://github.com/Anodynous/stenogotchi/blob/8c8ae27af96f836acc295f0f12cf3c3dbc80c847/stenogotchi/plugins/default/plover_link.py
+- https://github.com/GamesCreatorsClub/GCC-Joystick/tree/master/src/python/bt_joystick
+- https://github.com/SySS-Research/bluetooth-keyboard-emulator
+- https://github.com/jascosius/neo-bluetooth-keyboard
+- https://raspberrypi.stackexchange.com/questions/45246/bluetooth-import-for-python-raspberry-pi-3
 
 ## Matrix optimization
 
